Fixed layout spacing issue

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -16,7 +16,7 @@ body {
   background: #f7f6e5;
   background: linear-gradient(90deg, #f7f6e5 0%, #cee5d0 48%, #f7f6e5 100%);
   margin: 0;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .container {
